<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonitoringActivity">

    <TextView
        android:id="@+id/btnComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/complete"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewPlus"
        android:layout_width="185dp"
        android:layout_height="184dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape" />

    <TextView
        android:id="@+id/tvMonitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="40dp"
        android:text="@string/monitoring"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMonitoringInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMonitoringInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="55dp"
        android:text="@string/monitoring_info"
        android:textColor="@color/grey"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/pageIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/pageIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ivPicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/dot1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/dot_outline" />

        <View
            android:id="@+id/dot2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/dot_outline" />

        <View
            android:id="@+id/dot3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/dot_filled" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="382dp"
        android:layout_height="301dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/illustration3" />

</androidx.constraintlayout.widget.ConstraintLayout>